force-app/main/default/objects/leaseworks__Technical_Audit__c/leaseworks__Technical_Audit__c.object-meta.xml
<CustomObject>
    <description>Reporting only. Manage all your routine inspections here, including annual audits, asset delivery and return visits. Schedule inspections automatically based on start and end dates using the quick action button, or import your schedule manually. As the technical inspection team, use this platform to plan your visits, document notes, and record audit details.</description>
    <label>Technical Audit</label>
    <nameField>
        <label>Technical Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>