force-app/main/default/objects/leaseworks__Technical_Audit__c/fields/Assigned_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Local field created to accept lookups to Account</description>
    <inlineHelpText>Select the vendor via lookup (start typing the first few letters &amp; select the Account when visible)</inlineHelpText>
    <label>Assigned To (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Technical Audits</relationshipLabel>
    <relationshipName>Technical_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>