force-app/main/default/objects/leaseworks__Technical_Audit__c/fields/leaseworks__Asset__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipLabel>Technical Audits</relationshipLabel>
    <relationshipName>Technical_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>