force-app/main/default/objects/leaseworks__Technical_Audit__c/fields/leaseworks__Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Audit_Date__c</fullName>
    <description>Date on which audit is started</description>
    <label>Audit Start Date</label>
    <type>Date</type>
</CustomField>