force-app/main/default/objects/leaseworks__Technical_Audit__c/fields/leaseworks__Audit_Purpose_Requirements__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Audit_Purpose_Requirements__c</fullName>
    <description>Specific criteria, standards, or benchmarks that auditors use to evaluate the subject of the audit.</description>
    <inlineHelpText>Specific criteria, standards, or benchmarks that auditors use to evaluate the subject of the audit.</inlineHelpText>
    <label>Audit Purpose &amp; Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>