force-app/main/default/objects/leaseworks__Technical_Audit__c/fields/leaseworks__Current_Flight_Cycles__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Flight_Cycles__c</fullName>
    <label>CSN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>