force-app/main/default/objects/leaseworks__Technical_Audit__c/validationRules/leaseworks__AuditEndDatecannotbeforeAuditStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__AuditEndDatecannotbeforeAuditStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Audit_End_Date__c &lt; leaseworks__Audit_Date__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Audit_End_Date__c</errorDisplayField>
    <errorMessage>Audit End Date cannot before Audit Start Date</errorMessage>
</ValidationRule>