force-app/main/default/objects/leaseworks__Technical_Audit__c/validationRules/leaseworks__AuditStartDateNotGreaterthanAuditEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__AuditStartDateNotGreaterthanAuditEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Audit_Date__c &gt; leaseworks__Audit_End_Date__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Audit_Date__c</errorDisplayField>
    <errorMessage>Audit Start Date cannot greater than Audit End Date</errorMessage>
</ValidationRule>