force-app/main/default/objects/leaseworks__Technical_Audit__c/validationRules/leaseworks__Do_not_allow_Asset_change.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Do_not_allow_Asset_change</fullName>
    <active>false</active>
    <errorConditionFormula>false /*ISCHANGED(Asset__c)*/</errorConditionFormula>
    <errorMessage>This Audit is associated with the Asset and cannot be changed</errorMessage>
</ValidationRule>